--- a/app/src/main/res/layout/collab_dialog.xml
+++ b/app/src/main/res/layout/collab_dialog.xml
@@ -8,9 +8,9 @@
     <ScrollView
         android:layout_width="300dp"
         android:layout_gravity="center"
-        android:layout_height="wrap_content">
+        android:layout_height="170dp">
         <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/rv_collab"
             />
@@ -29,6 +29,7 @@
             android:id="@+id/et_add_collab"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
             android:textColor="@color/MediumPurple"
             android:theme="@style/AppTheme.EditText"
             />
