--- a/app/src/main/res/layout/item_colab.xml
+++ b/app/src/main/res/layout/item_colab.xml
@@ -3,14 +3,14 @@
     android:orientation="horizontal"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_colab"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
+        android:layout_weight="3"
         android:layout_margin="4dp"
         android:layout_height="wrap_content"
-        android:text="asdasd"
         />
     <ImageView
         android:id="@+id/iv_remove"
