--- a/app/src/main/res/layout/fragment_notes_collaborator_add.xml
+++ b/app/src/main/res/layout/fragment_notes_collaborator_add.xml
@@ -16,7 +16,7 @@
         android:textSize="20sp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
-        android:text="Add Collaborator"/>
+        android:text="@string/notes_layout_collaborator_add"/>
 
     <EditText
         android:id="@+id/notes_email"
@@ -25,14 +25,14 @@
         android:textColor="#424141"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Input User Email" />
+        android:hint="@string/notes_layout_collaborator_email" />
 
     <Button
         android:id="@+id/notes_add_collaborator"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="#424141"
-        android:background="#70B5C1"
-        android:text="Add"/>
+        android:textColor="@color/white"
+        android:background="@color/backgroundLightColor"
+        android:text="@string/notes_layout_collaborator_add_button"/>
 
 </LinearLayout>
