--- a/app/src/main/res/layout/fragment_list_calendar.xml
+++ b/app/src/main/res/layout/fragment_list_calendar.xml
@@ -17,7 +17,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:text="Filter By"
+            android:text="@string/calendar_layout_list_filter"
             android:textSize="17dp"
             android:gravity="center_vertical"
             />
@@ -38,7 +38,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:text="Sort By"
+            android:text="@string/calendar_layout_list_sort"
             android:textSize="17dp"
             android:gravity="center_vertical"
             />
@@ -59,7 +59,7 @@
         <TextView
             android:layout_width="100dp"
             android:layout_height="match_parent"
-            android:text="Filter Tags"
+            android:text="@string/calendar_layout_list_tag"
             android:textSize="17dp"
             android:gravity="center_vertical"
             />
