--- a/app/src/main/res/layout/content_calendar.xml
+++ b/app/src/main/res/layout/content_calendar.xml
@@ -20,10 +20,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <TextView
-                android:layout_width="match_parent"
-                android:id="@+id/tv_calendar_message"
-                android:layout_height="wrap_content"/>
+
+
+            <ProgressBar
+                android:id="@+id/loading_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:indeterminateTintMode="src_atop"
+                android:indeterminateTint="@color/CornflowerBlue"
+                android:layout_gravity="center" />
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_calendar"
                 android:layout_width="match_parent"
