--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -15,6 +15,7 @@
         android:background="@drawable/bg_notes_edit_text"
         android:paddingLeft="10dp"
         android:paddingTop="5dp"
+        android:hint="@string/notes_layout_detail_title_here"
         android:paddingRight="10dp"
         android:paddingBottom="5dp"
         android:textSize="18sp" />
@@ -33,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/bg_notes_edit_text"
+            android:hint="@string/notes_layout_detail_content_here"
             android:shadowColor="@color/transparent"
             android:backgroundTint="@color/transparent"
             android:gravity="top"
