--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -7,10 +7,6 @@
         android:id="@+id/menu_main"
         android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_home"
-            android:title="@string/menu_home" />
-        <item
             android:id="@+id/nav_notes"
             android:icon="@drawable/ic_menu_notes"
             android:title="@string/menu_notes" />
@@ -20,13 +16,13 @@
             android:title="@string/menu_calendar" />
     </group>
 
-    <group
-        android:id="@+id/menu_option"
-        android:checkableBehavior="single">
-        <item
-            android:id="@+id/nav_setting"
-            android:icon="@drawable/ic_menu_setting"
-            android:title="@string/menu_setting" />
-    </group>
+<!--    <group-->
+<!--        android:id="@+id/menu_option"-->
+<!--        android:checkableBehavior="single">-->
+<!--        <item-->
+<!--            android:id="@+id/nav_setting"-->
+<!--            android:icon="@drawable/ic_menu_setting"-->
+<!--            android:title="@string/menu_setting" />-->
+<!--    </group>-->
 
 </menu>
