--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,7 +8,7 @@
     <fragment
         android:id="@+id/nav_home"
         android:name="edu.bluejack19_2.chronotes.home.ui.home.HomeFragment"
-        android:label="@string/menu_home"
+        android:label="@string/menu_notes"
         tools:layout="@layout/fragment_home" />
 
     <fragment
