--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,13 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/nav_home">
-
-    <fragment
-        android:id="@+id/nav_home"
-        android:name="edu.bluejack19_2.chronotes.home.ui.home.HomeFragment"
-        android:label="@string/menu_notes"
-        tools:layout="@layout/fragment_home" />
+    app:startDestination="@+id/nav_notes">
 
     <fragment
         android:id="@+id/nav_notes"
@@ -22,10 +16,4 @@
         android:name="edu.bluejack19_2.chronotes.home.ui.calendar.CalendarFragmentMain"
         android:label="@string/menu_calendar"
         tools:layout="@layout/fragment_calendar_main" />
-
-    <fragment
-        android:id="@+id/nav_setting"
-        android:name="edu.bluejack19_2.chronotes.home.ui.setting.SettingFragment"
-        android:label="@string/menu_setting"
-        tools:layout="@layout/fragment_setting" />
 </navigation>
